k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres-deployment
  namespace: vote-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
