k8s/result-deployment-eks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deployment
  namespace: vote-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: result

  template:
    metadata:
      labels:
        app: result

    spec:
      containers:
        - name: result
          image: kenny891/my-result-app_demo:1.0

          ports:
            - containerPort: 80
