k8s/vote-deployment-eks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-deployment
  namespace: vote-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: vote

  template:
    metadata:
      labels:
        app: vote

    spec:
      containers:
        - name: vote
          image: 573539705056.dkr.ecr.eu-north-1.amazonaws.com/vote-app:6.0

          ports:
            - containerPort: 80
