k8s/vote-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: vote-deployment
  namespace: vote-app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: vote

  template:
    metadata:
      labels:
        app: vote

    spec:
      containers:
        - name: vote
          image: kenny891/my-vote-app_demo:4.0
          ports:
            - containerPort: 80
