k8s/worker-deployment-eks.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: worker-deployment
  namespace: vote-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: worker

  template:
    metadata:
      labels:
        app: worker

    spec:
      containers:
        - name: worker
          image: kenny891/my-worker-app_demo:1.0
          imagePullPolicy: Always
