k8s/redis-service-eks.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: vote-app

spec:
  type: ClusterIP

  selector:
    app: redis

  ports:
    - port: 6379
      targetPort: 6379
