k8s/result-service-eks.yaml
apiVersion: v1
kind: Service

metadata:
  name: result-service
  namespace: vote-app

spec:
  type: ClusterIP

  selector:
    app: result

  ports:
    - port: 80
      targetPort: 80
