k8s/result-service.yml
apiVersion: v1
kind: Service

metadata:
  name: result-service
  namespace: result-app

spec:
  type: ClusterIP

  selector:
    app: result

  ports:
    - port: 80
      targetPort: 80
