k8s/vote-service-eks.yaml
apiVersion: v1
kind: Service

metadata:
  name: vote-service
  namespace: vote-app

spec:
  type: ClusterIP

  selector:
    app: vote

  ports:
    - port: 80
      targetPort: 80
