k8s/vote-service.yml
apiVersion: v1
kind: Service

metadata:
  name: vote-service
  namespace: vote-app

spec:
  type: NodePort

  selector:
    app: vote

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
